fixed bugs created in new code for condtional visibility based on another field, mostly related to old configs

--- a/Elements/SPEasyFormsAssets/Css/speasyforms.css
+++ b/Elements/SPEasyFormsAssets/Css/speasyforms.css
@@ -6,6 +6,9 @@ div.speasyforms-tabs, div.speasyforms-accordion {
     margin-top: 10px;
     margin-bottom: 20px;    
 }
+.ui-tabs-nav {
+    width: 99% !important;
+}
 table.speasyforms-columns, table.speasyforms-columns h3.ms-standardheader, table.speasyforms-columns td.ms-formbody {
     margin: 0px;
     padding: 0px;
